Fix AccessibilityMneu overflow styles

--- a/src/domain/header/_accessibilityMenu.scss
+++ b/src/domain/header/_accessibilityMenu.scss
@@ -1,7 +1,7 @@
 .app-AccessibilityMenu {
     padding: 15px 30px;
-    overflow: scroll;
     width: 420px;
+    max-height: 70vh;
     
     &__btn-wrapper {
         display: flex;
